--- a/template/home.html
+++ b/template/home.html
@@ -33,5 +33,23 @@
       </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <iframe src='https://webchat.botframework.com/embed/convdjangobot?s=1Inwl3RQLhM.RLNl5jcyGiGBXfIIDQ5j6EhCG6UjfsbVkhsBy-2xZeI'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <script>
+
+      var xhr = new XMLHttpRequest();
+      xhr.open('GET', "https://webchat.botframework.com/api/tokens", true);
+      xhr.setRequestHeader('Authorization', 'BotConnector ' + '1Inwl3RQLhM.RLNl5jcyGiGBXfIIDQ5j6EhCG6UjfsbVkhsBy-2xZeI');
+      xhr.send();
+      xhr.onreadystatechange = processRequest;
+  
+      function processRequest(e) {
+        if (xhr.readyState == 4  && xhr.status == 200) {
+          var response = JSON.parse(xhr.responseText);
+          document.getElementById("chat").src="https://webchat.botframework.com/embed/convdjangobot?t="+response
+        }
+      }
+  
+    </script>
+  
   </body>
 </html>
