--- a/template/home.html
+++ b/template/home.html
@@ -7,16 +7,16 @@
     
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
- <style>
-.iframe {
+    <style>
+    .iframe {
     position: absolute;
     bottom: 0;
     right: 0;
     width: 200px;
     height: 200px;
     z-index: 999;
-}
-</style>
+  }
+    </style>
   
   </head>
   <body>
@@ -44,7 +44,8 @@
       </div>
     </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <iframe src='https://webchat.botframework.com/embed/convdjangobot?s=1Inwl3RQLhM.RLNl5jcyGiGBXfIIDQ5j6EhCG6UjfsbVkhsBy-2xZeI'  
+    <iframe class="iframe" src='https://webchat.botframework.com/embed/convdjangobot?s=1Inwl3RQLhM.RLNl5jcyGiGBXfIIDQ5j6EhCG6UjfsbVkhsBy-2xZeI' 
+     
     
     </iframe>
     <script>
