--- a/template/home.html
+++ b/template/home.html
@@ -88,11 +88,11 @@ background-color:#007bff!important
        <a class="nav-link " data-value="portfolio"href="/userlogin">LOGIN</a>    
     </li>
     <li class="nav-item"> 
-       <a class="nav-link " data-value="blog" href="#">Blog</a>         </li>   
+       <a class="nav-link " data-value="blog" href="#">BLOG</a>         </li>   
    <li class="nav-item">  
-      <a class="nav-link " data-value="team" href="#">         Team</a>       </li>  
+      <a class="nav-link " data-value="team" href="#">         TEAM</a>       </li>  
    <li class="nav-item"> 
-    <a class="nav-link " data-value="contact" href="#">Contact</a>       </li> 
+    <a class="nav-link " data-value="contact" href="#">CONTACT</a>       </li> 
    </ul> 
    </div></nav>
    <header class="header">
@@ -102,7 +102,7 @@ background-color:#007bff!important
             <h1>    Hello ,Welcome To PVI Results 
              <p>    Please proceed to the Login.
          </p>   
-          <button class="btn btn-outline-secondary btn-lg">See more</button>   </h1>  
+          <button class="btn btn-outline-secondary btn-lg">SEE MORE</button>   </h1>  
          </div>
     </div>
     <script>
