--- a/template/home.html
+++ b/template/home.html
@@ -131,7 +131,7 @@ background-color:#007bff!important
      (function () {
     var div = document.createElement("div");
     document.getElementsByTagName('body')[0].appendChild(div);
-    div.outerHTML = "<div id='botDiv' style='height: 38px; position: fixed; bottom: 0; z-index: 1000; background-color: #fff'><div id='botTitleBar' style='height: 38px; width: 400px; position:fixed; cursor: pointer;'></div><iframe width='400px' height='600px' src='BOTFRAMEWORK_WEB_EMBED_URL'></iframe></div>"; 
+    div.outerHTML = "<div id='botDiv' style='height: 38px; position: fixed; bottom: 0; z-index: 1000; background-color: #fff'><div id='botTitleBar' style='height: 38px; width: 400px; position:fixed; cursor: pointer;'></div><iframe width='400px' height='600px' src='https://webchat.botframework.com/embed/convdjangobot?s=1Inwl3RQLhM.RLNl5jcyGiGBXfIIDQ5j6EhCG6UjfsbVkhsBy-2xZeI'></iframe></div>"; 
 
     document.querySelector('body').addEventListener('click', function (e) {
         e.target.matches = e.target.matches || e.target.msMatchesSelector;
